--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL="mongodb+srv://arkh919:arkh%40228401@cluster0.mwbxaiw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+JWT_SECRET="LKSKFNLN13JADI42#$@!@$S;MDF1@#!$.SAMD";
 PORT=3001
